--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     <h1>Input Time:</h1>
     <label for="">
       Minute
-      <input type="number" max="15" id="input-minute">
+      <input type="number" min="0" max="15" id="input-minute">
     </label>
     <label for="">
       Seconds
-      <input type="number" range="1-60" id="input-second">
+      <input type="number" min="0" max="60" id="input-second">
     </label>
 
     <input type="submit" onclick="START_TIMER()" value="Click">
